--- a/app/locale/zh_TW/Mage_Adminhtml.csv
+++ b/app/locale/zh_TW/Mage_Adminhtml.csv
@@ -577,227 +577,227 @@
 "Sending","寄出中"
 "Searchable on Front-end","可在前台搜索"
 "Duplicate","重複"
-"Wrong tab configuration","Wrong tab configuration"
-"Add New Page","Add New Page"
-"Edit ""%s""","Edit ""%s"""
-"Submit Invoice","Submit Invoice"
-"Product duplicated","Product duplicated"
-"Delete Role","Delete Role"
-"Identifier","Identifier"
-"Poll Answers","Poll Answers"
-"Wishlists","Wishlists"
-"Last Url","Last Url"
-"Edit Block '%s'","Edit Block '%s'"
-"Tax Rule Information","Tax Rule Information"
-"Edit Class Details","Edit Class Details"
-"Rule was successfully deleted","Rule was successfully deleted"
-"Attribute Set","Attribute Set"
-"Customer View","Customer View"
-"Sender Email","Sender Email"
-"Products Tags","Products Tags"
-"HTTP (unsecure)","HTTP (unsecure)"
-"Add Option","Add Option"
-"Shipping Price","Shipping Price"
-"Edit Website '%s'","Edit Website '%s'"
-"Create New Customer","Create New Customer"
-"Edit Newsletter","Edit Newsletter"
-"# of Uses","# of Uses"
-"Number of times deleted","Number of times deleted"
-"Newsletter Finish","Newsletter Finish"
-"Closed","Closed"
-"Edit Page '%s'","Edit Page '%s'"
-"Product deleted","Product deleted"
-"Preview","Preview"
-"Save Attribute Set","Save Attribute Set"
-"Store was successfully saved","Store was successfully saved"
-"You have not enought permissions to login.","You have not enought permissions to login."
-"Product Attributes","Product Attributes"
-"Return Html Version","Return Html Version"
-"Save Order","Save Order"
-"There are no items in customer's shopping cart at the moment","There are no items in customer's shopping cart at the moment"
-"Group Information","Group Information"
-"User Name","User Name"
-"New Password","New Password"
-"Average rating","Average rating"
-"New User","New User"
-"Active","Active"
-"You can not delete self assigned roles.","You can not delete self assigned roles."
-"Invoice was successfully saved","Invoice was successfully saved"
-"Qty Ordered","Qty Ordered"
+"Wrong tab configuration","錯誤頁籤設定"
+"Add New Page","增加新頁"
+"Edit ""%s""","編輯 ""%s"""
+"Submit Invoice","提交發票"
+"Product duplicated","產品重複"
+"Delete Role","刪除角色"
+"Identifier","判別項"
+"Poll Answers","投票答案"
+"Wishlists","收藏"
+"Last Url","最後的 Url"
+"Edit Block '%s'","編輯模塊 '%s'"
+"Tax Rule Information","稅則資料"
+"Edit Class Details","編輯稅別細節"
+"Rule was successfully deleted","已成功加入規則"
+"Attribute Set","屬性組"
+"Customer View","客戶視窗"
+"Sender Email","寄件者電子郵件"
+"Products Tags","商品標籤"
+"HTTP (unsecure)","HTTP (非安全性)"
+"Add Option","增加選項"
+"Shipping Price","寄送費用"
+"Edit Website '%s'","編輯網站 '%s'"
+"Create New Customer","建立新客戶"
+"Edit Newsletter","編輯電子報"
+"# of Uses","使用次數 #"
+"Number of times deleted","刪除次數"
+"Newsletter Finish","電子報結束"
+"Closed","關閉"
+"Edit Page '%s'","編輯頁面 '%s'"
+"Product deleted","刪除商品"
+"Preview","預覽"
+"Save Attribute Set","儲存屬性組"
+"Store was successfully saved","已成功儲存商店"
+"You have not enought permissions to login.","您沒有足夠的權限登入"
+"Product Attributes","商品屬性"
+"Return Html Version","回到 Html 版本"
+"Save Order","儲存訂單"
+"There are no items in customer's shopping cart at the moment","在客戶購物車中沒有商品"
+"Group Information","群組資料"
+"User Name","用戶名稱"
+"New Password","新密碼"
+"Average rating","平均評比"
+"New User","新用戶"
+"Active","啟動"
+"You can not delete self assigned roles.","您無法刪除主動指派的角色"
+"Invoice was successfully saved","發票已成功儲存"
+"Qty Ordered","訂購數量"
 "XML","XML"
-"Send auto-generated password","Send auto-generated password"
-"Order Information","Order Information"
-"List (default) / Grid","List (default) / Grid"
-"Newsletter Received","Newsletter Received"
-"Queue Date Start","Queue Date Start"
-"SEF URL Identifier","SEF URL Identifier"
-"Product SKU","Product SKU"
-"Grand Total","Grand Total"
+"Send auto-generated password","寄送自動產生的密碼"
+"Order Information","訂單資料"
+"List (default) / Grid","列表 (預設) / 格子"
+"Newsletter Received","收到的電子報"
+"Queue Date Start","佇列開始日期"
+"SEF URL Identifier","SEF URL 判別項"
+"Product SKU","商品 SKU"
+"Grand Total","總額"
 "Selected problem subscribers successfully unsubscribed","Selected problem subscribers successfully unsubscribed"
-"Category Products","Category Products"
-"Action","Action"
-"Role Users","Role Users"
-"Date Closed","Date Closed"
-"Are you sure? This order will be cancelled and a new one will be created instead","Are you sure? This order will be cancelled and a new one will be created instead"
-"Sender Name","Sender Name"
-"Approved","Approved"
-"Save and Apply","Save and Apply"
-"Product Tax Class","Product Tax Class"
-"Block was succesfully deleted","Block was succesfully deleted"
-"Products Report (Total)","Products Report (Total)"
-"Open","Open"
-"Any","Any"
-"Edit Store","Edit Store"
-"Added","Added"
-"Configurable Product Settings","Configurable Product Settings"
-"Content","Content"
-"Role Name","Role Name"
-"Select All","Select All"
-"in","in"
-"Are you sure you want to take this action?","Are you sure you want to take this action?"
-"Role Information","Role Information"
-"Options Control","Options Control"
-"Meta Keywords","Meta Keywords"
-"Please select products to add","Please select products to add"
-"Sender","Sender"
-"Product","Product"
-"Tax Rules","Tax Rules"
-"Newsletter Start","Newsletter Start"
-"Unable to find a block to delete","Unable to find a block to delete"
-"New Tax Rate","New Tax Rate"
-"Rating was successfully deleted","Rating was successfully deleted"
-"Error during import: %s","Error during import: %s"
-"Delete Answer","Delete Answer"
-"Edit Customer Groups","Edit Customer Groups"
-"Please, select County","Please, select County"
-"Customer Tags","Customer Tags"
-"(eg: domain.com/identifier)","(eg: domain.com/identifier)"
-"No search modules registered","No search modules registered"
-"New Product Tax Class","New Product Tax Class"
-"Save Rule","Save Rule"
-"Edit Sorting","Edit Sorting"
-"The block you are trying to save no longer exists","The block you are trying to save no longer exists"
-"Customers Report","Customers Report"
-"Download","Download"
-"Detail","Detail"
-"Created On","Created On"
-"Category delete error","Category delete error"
-"Review successfully deleted","Review successfully deleted"
-"Root","Root"
+"Category Products","目錄產品"
+"Action","動作"
+"Role Users","角色用戶"
+"Date Closed","關閉日期"
+"Are you sure? This order will be cancelled and a new one will be created instead","你確定嗎？該訂單將被取消，將建立一個份新的訂單代替"
+"Sender Name","寄送者名稱"
+"Approved","認可"
+"Save and Apply","儲存並套用"
+"Product Tax Class","商品稅別"
+"Block was succesfully deleted","模塊已成功刪除"
+"Products Report (Total)","產品報告（全部）"
+"Open","開啟"
+"Any","任何"
+"Edit Store","編輯商店"
+"Added","已加入"
+"Configurable Product Settings","可調整的商品設定"
+"Content","內容"
+"Role Name","角色名稱"
+"Select All","全選"
+"in","於"
+"Are you sure you want to take this action?","你確定要執行此動作嗎？"
+"Role Information","角色資料"
+"Options Control","選項控制"
+"Meta Keywords","Meta 關鍵字"
+"Please select products to add","請選擇要加入的商品"
+"Sender","寄送人"
+"Product","商品"
+"Tax Rules","稅則"
+"Newsletter Start","電子報開始"
+"Unable to find a block to delete","無法找到可刪除的模塊"
+"New Tax Rate","新稅率"
+"Rating was successfully deleted","稅率已成功刪除"
+"Error during import: %s","匯入中發生錯誤: %s"
+"Delete Answer","刪除回答"
+"Edit Customer Groups","編輯顧客群組"
+"Please, select County","請選擇國家"
+"Customer Tags","顧客標籤"
+"(eg: domain.com/identifier)","(例: domain.com/辨別項)"
+"No search modules registered","無註冊的搜尋模組"
+"New Product Tax Class","新商品稅別"
+"Save Rule","儲存規則"
+"Edit Sorting","編輯排序"
+"The block you are trying to save no longer exists","欲儲存的模塊已不存在"
+"Customers Report","客戶報告"
+"Download","下載"
+"Detail","詳細"
+"Created On","建立於"
+"Category delete error","目錄刪除錯誤"
+"Review successfully deleted","已成功刪除評論"
+"Root","根"
 "ID","ID"
-"Number of Responses","Number of Responses"
-"Meta Description","Meta Description"
-"Source Model","Source Model"
-"Unselect All Stores","Unselect All Stores"
-"Add New Group","Add New Group"
-"Summary Rating","Summary Rating"
-"Rate","Rate"
-"Yes","Yes"
+"Number of Responses","回應次數"
+"Meta Description","Meta 敘述"
+"Source Model","原始模組"
+"Unselect All Stores","反選所有商店"
+"Add New Group","增加新的群組"
+"Summary Rating","評比摘要"
+"Rate","評比"
+"Yes","是"
 "Search Query","Search Query"
-"Template Information","Template Information"
-"Date Start","Date Start"
-"Total","Total"
-"Price","Price"
-"Filterable (no results)","Filterable (no results)"
-"Date Expire","Date Expire"
-"Number Fulfilled","Number Fulfilled"
-"New Category","New Category"
-"Save Rating","Save Rating"
-"Delete Option","Delete Option"
-"Save Invoice","Save Invoice"
-"Unable to apply rules","Unable to apply rules"
-"New Tag","New Tag"
-"User Email","User Email"
-"Based On","Based On"
-"Edit Customer's Address","Edit Customer's Address"
-"New Order","New Order"
-"Group Name","Group Name"
-"Tax Rate Information","Tax Rate Information"
-"Queue Information","Queue Information"
-"Guest","Guest"
-"Varchar","Varchar"
-"Number of results<br/>(For last time placed)","Number of results<br/>(For last time placed)"
-"Add New Customer Group","Add New Customer Group"
-"Product attribute was successfully deleted","Product attribute was successfully deleted"
-"Unable to find answer to delete.","Unable to find answer to delete."
-"Unable to find a tag to delete","Unable to find a tag to delete"
-"Meta Data","Meta Data"
-"Save User","Save User"
-"Template Type","Template Type"
-"Invalid %s ""%s"" in the Row #%s","Invalid %s ""%s"" in the Row #%s"
-"Reset","Reset"
+"Template Information","模組資料"
+"Date Start","開始日期"
+"Total","總計"
+"Price","價格"
+"Filterable (no results)","可過濾的（無結果）"
+"Date Expire","到期日"
+"Number Fulfilled","完成數"
+"New Category","新目錄"
+"Save Rating","儲存評比"
+"Delete Option","刪除選項"
+"Save Invoice","儲存發票"
+"Unable to apply rules","無法套用規則"
+"New Tag","新標籤"
+"User Email","使用者電子郵件"
+"Based On","根據"
+"Edit Customer's Address","編輯客戶地址"
+"New Order","新訂單"
+"Group Name","群組名稱"
+"Tax Rate Information","稅率資料"
+"Queue Information","佇列資料"
+"Guest","訪客"
+"Varchar","變動字串"
+"Number of results<br/>(For last time placed)","結果數<br/>(從上次)"
+"Add New Customer Group","增加新顧客群組"
+"Product attribute was successfully deleted","商品屬性已成功刪除"
+"Unable to find answer to delete.","無法找到要刪除的答案"
+"Unable to find a tag to delete","無法找到要刪除的標籤"
+"Meta Data","Meta 資料"
+"Save User","儲存用戶"
+"Template Type","模板種類"
+"Invalid %s ""%s"" in the Row #%s","錯誤 %s ""%s"" 在第 #%s 行"
+"Reset","重設"
 "Hits","Hits"
-"Page was successfully deleted","Page was successfully deleted"
-"Page Title","Page Title"
-"User with the same User Name or Email aleady exists","User with the same User Name or Email aleady exists"
-"Customers Tagged '%s'","Customers Tagged '%s'"
-"Region/State","Region/State"
-"Values Required","Values Required"
-"This order no longer exists","This order no longer exists"
-"Account status","Account status"
-"Product Tags","Product Tags"
-"Item Status","Item Status"
-"Interface Language","Interface Language"
-"Cancelled","Cancelled"
-"Position","Position"
-"Items Ordered","Items Ordered"
-"Rating was successfully saved","Rating was successfully saved"
-"New Product","New Product"
-"Purchase On","Purchase On"
-"Fiterable (with results)","Fiterable (with results)"
-"Password","Password"
-"Shipped to First Name","Shipped to First Name"
-"Catalog Input Type for Store Owner","Catalog Input Type for Store Owner"
-"Decimal Number","Decimal Number"
-"Wishlist","Wishlist"
-"Create New Invoice","Create New Invoice"
-"Credit Memo was saved succesfully","Credit Memo was saved succesfully"
-"Tax Rates","Tax Rates"
-"Submit Credit Memo","Submit Credit Memo"
-"Unable to find a page to delete","Unable to find a page to delete"
-"Purchased from (store)","Purchased from (store)"
-"Added From","Added From"
-"Payment Method","Payment Method"
-"Poll was successfully saved","Poll was successfully saved"
-"New Rating","New Rating"
+"Page was successfully deleted","頁面已成功刪除"
+"Page Title","頁面標題"
+"User with the same User Name or Email aleady exists","同電子信件的用戶已存在"
+"Customers Tagged '%s'","客戶標籤 '%s'"
+"Region/State","地區/省"
+"Values Required","必須值"
+"This order no longer exists","此訂單已不存在"
+"Account status","帳戶狀態"
+"Product Tags","商品標籤"
+"Item Status","商品狀態"
+"Interface Language","介面語系"
+"Cancelled","取消"
+"Position","位置"
+"Items Ordered","訂購產品"
+"Rating was successfully saved","評比已儲存成功"
+"New Product","新產品"
+"Purchase On","購買於"
+"Fiterable (with results)","可過濾的（包含結果）"
+"Password","密碼"
+"Shipped to First Name","寄送使用名"
+"Catalog Input Type for Store Owner","商店所有人的目錄輸入種類"
+"Decimal Number","小數"
+"Wishlist","收藏"
+"Create New Invoice","建立新的發票"
+"Credit Memo was saved succesfully","收款附註已成功儲存"
+"Tax Rates","稅率"
+"Submit Credit Memo","提交收款附註"
+"Unable to find a page to delete","找不到要刪除的頁面"
+"Purchased from (store)","從此（商店）購買"
+"Added From","加入從"
+"Payment Method","付款方式"
+"Poll was successfully saved","投票已成功儲存"
+"New Rating","新評比"
 "Delete Tier","Delete Tier"
-"Telephone","Telephone"
-"New Page","New Page"
-"Error Text","Error Text"
-"Edit Rule '%s'","Edit Rule '%s'"
-"Page Information","Page Information"
-"Delete Page","Delete Page"
-"There are no items in customer's wishlist at the moment","There are no items in customer's wishlist at the moment"
-"This attribute no longer exists","This attribute no longer exists"
-"CMS Pages","CMS Pages"
-"Attribute set was successfully removed.","Attribute set was successfully removed."
-"You successfully logged out.","You successfully logged out."
-"Total Tags","Total Tags"
-"Visibility","Visibility"
-"Edit Template","Edit Template"
-"Frontend Properties","Frontend Properties"
-"Pending","Pending"
-"Error while deleting a group. Please try again later.","Error while deleting a group. Please try again later."
-"Use website","Use website"
-"No problems found","No problems found"
-"Edit Store '%s'","Edit Store '%s'"
-"Delete Customer Group","Delete Customer Group"
-"CMS Blocks","CMS Blocks"
-"Popular Tags","Popular Tags"
-"Edit Page","Edit Page"
-"Edit Tax Rate","Edit Tax Rate"
-"Set Name","Set Name"
-"Tax class","Tax class"
-"Add New Rule","Add New Rule"
-"Uses per customer","Uses per customer"
+"Telephone","電話號碼"
+"New Page","新頁面"
+"Error Text","錯誤文"
+"Edit Rule '%s'","編輯規則 '%s'"
+"Page Information","頁面資料"
+"Delete Page","刪除頁面"
+"There are no items in customer's wishlist at the moment","在客戶的收藏中無任何物品"
+"This attribute no longer exists","此屬性已不存在"
+"CMS Pages","CMS 頁面"
+"Attribute set was successfully removed.","屬性已成功刪除"
+"You successfully logged out.","您已成功登出"
+"Total Tags","全體標籤"
+"Visibility","顯示"
+"Edit Template","編輯模板"
+"Frontend Properties","前台內容"
+"Pending","等待中"
+"Error while deleting a group. Please try again later.","刪除群組中發生錯誤。請稍候再試。"
+"Use website","使用網站"
+"No problems found","沒有發現問題"
+"Edit Store '%s'","編輯商店 '%s'"
+"Delete Customer Group","刪除顧客群組"
+"CMS Blocks","CMS 模塊"
+"Popular Tags","熱門的標籤"
+"Edit Page","編輯頁面"
+"Edit Tax Rate","編輯稅率"
+"Set Name","設定名稱"
+"Tax class","稅別"
+"Add New Rule","增加新的規則"
+"Uses per customer","每位客戶使用次數"
 "HTTPS (SSL)","HTTPS (SSL)"
-"Template Content","Template Content"
-"Order was not cancelled","Order was not cancelled"
-"Invoice #%s","Invoice #%s"
-"Comparable on Front-end","Comparable on Front-end"
-"Save Template","Save Template"
-"Newsletter Subscription","Newsletter Subscription"
-"Delete User","Delete User"
+"Template Content","模板內容"
+"Order was not cancelled","訂單未取消"
+"Invoice #%s","發票號碼 #%s"
+"Comparable on Front-end","可於前台比較"
+"Save Template","儲存模板"
+"Newsletter Subscription","電子報訂閱"
+"Delete User","刪除用戶"
 "Invalid Shipping Price ""%s"" in the Row #%s","Invalid Shipping Price ""%s"" in the Row #%s"
 "Customers Tags","Customers Tags"
 "Image","Image"
