--- a/app/locale/zh_TW/Mage_Customer.csv
+++ b/app/locale/zh_TW/Mage_Customer.csv
@@ -118,7 +118,7 @@
 "Status","狀態"
 "Order #","訂單號碼 #"
 "My Reviews","我的評論"
-"New Password","新密碼不符合"
+"New Password","新密碼"
 "Date","日期"
 "Login or Create an Account","登入或是建立一個帳戶"
 "Shipping Method","寄送方式"
