--- a/wiki/CSVStatus.wiki
+++ b/wiki/CSVStatus.wiki
@@ -5,7 +5,7 @@
 {{{
  44127 Mage_Adminhtml.csv Assigned to rogerger.py   progress:80%
    332 Mage_Backup.csv
-  4327 Mage_Catalog.csv
+  4327 Mage_Catalog.csv Assigned to ellen progress:100%
    608 Mage_CatalogRule.csv
    530 Mage_CatalogSearch.csv
   8186 Mage_Checkout.csv
